fix sidebar to be visible on screen

--- a/Students/css/dashboard.css
+++ b/Students/css/dashboard.css
@@ -87,9 +87,9 @@ header {
 }
 
 .fixed-container {
-
-    display: flex;
-    justify-content: center;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 30px;
 }
 
 .top-container {
